crates/php-parser/tests/snapshots/integration__function_type_hints.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function process(?int $x, int|string $y, Countable&Traversable $z): ?string {
    return null;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "process",
          "params": [
            {
              "name": "x",
              "type_hint": {
                "kind": {
                  "Nullable": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "int"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 24,
                          "end": 27
                        }
                      }
                    },
                    "span": {
                      "start": 24,
                      "end": 27
                    }
                  }
                },
                "span": {
                  "start": 23,
                  "end": 27
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 23,
                "end": 30
              }
            },
            {
              "name": "y",
              "type_hint": {
                "kind": {
                  "Union": [
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "int"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 32,
                            "end": 35
                          }
                        }
                      },
                      "span": {
                        "start": 32,
                        "end": 35
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "string"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 36,
                            "end": 42
                          }
                        }
                      },
                      "span": {
                        "start": 36,
                        "end": 42
                      }
                    }
                  ]
                },
                "span": {
                  "start": 32,
                  "end": 42
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 32,
                "end": 45
              }
            },
            {
              "name": "z",
              "type_hint": {
                "kind": {
                  "Intersection": [
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "Countable"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 47,
                            "end": 56
                          }
                        }
                      },
                      "span": {
                        "start": 47,
                        "end": 56
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "Traversable"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 57,
                            "end": 69
                          }
                        }
                      },
                      "span": {
                        "start": 57,
                        "end": 69
                      }
                    }
                  ]
                },
                "span": {
                  "start": 47,
                  "end": 69
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 47,
                "end": 71
              }
            }
          ],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": "Null",
                  "span": {
                    "start": 95,
                    "end": 99
                  }
                }
              },
              "span": {
                "start": 88,
                "end": 101
              }
            }
          ],
          "return_type": {
            "kind": {
              "Nullable": {
                "kind": {
                  "Named": {
                    "parts": [
                      "string"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 75,
                      "end": 81
                    }
                  }
                },
                "span": {
                  "start": 75,
                  "end": 81
                }
              }
            },
            "span": {
              "start": 74,
              "end": 81
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 102
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 102
  }
}
